# Pucklights_App

./: README.md  bash command.txt  main.dart  main.py  pubspec.yaml  pyproject.toml  start.sh
.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/hockey_highlights/: MainActivity.kt
hockey_highlights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
